--- a/src/app/static-day/static-day.component.html
+++ b/src/app/static-day/static-day.component.html
@@ -41,6 +41,6 @@
 		</div>
 		<div class="col-xs-12 col-lg-3">
 			<label>Choose date: </label>
-			<dp-date-picker class="form-control" [(ngModel)] = "selectedDate" (click) = "chooseDate()"></dp-date-picker>
+			<dp-date-picker class="form-control" [(ngModel)] = "selectedDate" (onChange) = "chooseDate()"></dp-date-picker>
 		</div>
 	</div>
