--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="static-week">Thống kê theo tuần<span style="font-size:16px;" class="glyphicons glyphicons-important-day"></span></a></li>
-          <li><a href="static-day">Thống kê theo ngày<span style="font-size:16px;" class="glyphicons glyphicons-one-day"></span></a></li>
+          <li><a href="static-week">Thống kê theo tuần<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-home"></span></a></li>
+          <li><a href="static-day">Thống kê theo ngày<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a></li>
           <li><a href="">Settings<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a></li>
           <li><a href="">Notifications<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-bell"></span></a></li>
         </ul>
