--- a/src/app/static-day/static-day.component.html
+++ b/src/app/static-day/static-day.component.html
@@ -17,12 +17,24 @@
 					 <table class="table table-striped table-hover table-bordered">
 						 <thead>
 							 <tr>
-								 <th *ngFor="let x of campaignsDetail[0]">{{x}}</th>
+								 <th>date</th>
+								 <th>cid</th>
+								 <th>ndelivered</th>
+								 <th>ndrop</th>
+								 <th>nclicked</th>
+								 <th>nopened</th>
+								 <th>predict</th>
 							 </tr>
 						 </thead>
 						 <tbody>
-							 <tr *ngFor='let campaign of campaignsDetail | slice:1:campaignsDetail.length'>
-								 <td *ngFor="let attr of campaign" >{{attr}}</td>
+							 <tr *ngFor='let campaign of campaignsDetail'>
+								 <td>{{campaign['date']}}</td>
+								 <td>{{campaign['cid']}}</td>
+								 <td>{{campaign['ndelivered']}}</td>
+								 <td>{{campaign['ndrop']}}</td>
+								 <td>{{campaign['nclicked']}}</td>
+								 <td>{{campaign['nopened']}}</td>
+								 <td>{{campaign['predict']}}</td>
 							 </tr>
 						 </tbody>
 					 </table>
